--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <h1 style="color:White;">Welcome to Astratectus</h1>
-<p style="color:White;">The latest planet available is</p> <a href="link/to/your/download/file" download="filename">Unron Kahraad</a>
+<p style="color:White;">The latest planet available is</p> <a href="https://astratect.us/TestFile.txt" download="filename">Unron Kahraad</a>
 
 </body>
 </html>
