--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 
 
 <h1 style="color:White;">Welcome to Astratectus</h1>
-<p style="color:White;">The latest planet available is</p> <a href="https://astratect.us/GuideToAstratectusv0.3.pdf" download="Hipparchus' Guide to Astratectus">Unron Kahraad</a>
+<p style="color:White;">The latest planet available is 
+    <span>
+        <a href="https://astratect.us/GuideToAstratectusv0.3.pdf" 
+           download="Hipparchus' Guide to Astratectus" 
+           style="text-decoration:none; color:White;">
+           <b>Unron Kahraad.
+           </b>
+        </a>
+    </span>
+</p> 
+
 
 </body>
 </html>
